<resources>
    <string name="app_name">Private DNS Quick Tile</string>
    <string name="qt_default">Private DNS</string>
    <string name="app_config">Private DNS Quick Tile Modes</string>
    <string name="qt_off">DNS Off</string>
    <string name="qt_auto">DNS Auto</string>
    <string name="dns_on">DNS On</string>
    <string name="toast_no_permission">WRITE_SECURE_SETTINGS permission not granted</string>
    <string name="dns_hostname_hint">Enter hostname of DNS provider</string>
    <string name="toast_no_dns">DNS provider not configured</string>
    <string name="toast_changes_saved">Your changes have been saved</string>
    <string name="url_fdroid">https://f-droid.org/en/packages/com.jpwolfso.privdnsqt/</string>
    <string name="message_help">To modify the Private DNS settings, this app requires the WRITE_SECURE_SETTINGS permission, which can only be granted by ADB:</string>
    <string name="app_info">App info</string>
    <string name="view_fdroid">View on F-Droid</string>
    <string name="help">Help</string>
    <string name="shortcut_enable">Enable Private DNS</string>
    <string name="shortcut_disable">Disable Private DNS</string>
    <string name="shortcut_toggle">Toggle Private DNS</string>
</resources>
