<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearlayout1"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_alignParentLeft="true"
    android:orientation="vertical"
    android:weightSum="1"
    tools:context=".PrivateDnsConfigActivity">

    <Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_weight="0.25"></Toolbar>

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight="0.25"
        android:weightSum="3">

        <CheckBox
            android:id="@+id/check_off"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:padding="10dp"
            android:text="@string/qt_off" />

        <CheckBox
            android:id="@+id/check_auto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:padding="10dp"
            android:text="@string/qt_auto" />

        <CheckBox
            android:id="@+id/check_on"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:padding="10dp"
            android:text="@string/dns_on" />
    </RadioGroup>

    <EditText
        android:id="@+id/text_hostname"
        style="@android:style/Widget.DeviceDefault.EditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight="0.15"
        android:hint="@string/dns_hostname_hint"
        android:singleLine="true"
        android:textSize="16sp" />

    <Button
        android:id="@+id/button_ok"
        style="@android:style/Widget.DeviceDefault.Button.Borderless"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight="0.10"
        android:text="@android:string/ok" />

</LinearLayout>